# EdgeAI_Security_System

./: CMakeLists.txt  README.md  main.cpp
scripts/: data_collection.py  data_mining.py  fetch_negatives.py  test_model.py  train_model.py
